<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/TreeColor"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_margin="20px"
        android:background="@drawable/bg2"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textEditarDestino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/autour_one"
            android:text="@string/btnAgregarDestino"
            android:textColor="@color/TreeColor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etNombreDestino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/logoColor"
            android:fontFamily="@font/autour_one"
            android:hint="@string/NombreDestino"
            android:textColor="@color/TreeColor"
            android:textColorHint="@color/logoColor" />

    <Spinner
        android:id="@+id/spinnerPais"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

        <EditText
            android:id="@+id/etPrecio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/logoColor"
            android:fontFamily="@font/autour_one"
            android:hint="@string/Precio"
            android:inputType="numberDecimal"
            android:textColor="@color/TreeColor"
            android:textColorHint="@color/logoColor" />

        <EditText
            android:id="@+id/etDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/logoColor"
            android:fontFamily="@font/autour_one"
            android:hint="@string/Descripcion"
            android:inputType="textMultiLine"
            android:lines="3"
            android:textColor="@color/TreeColor"
            android:textColorHint="@color/logoColor" />

        <Button
            android:id="@+id/btnSeleccionarImagen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/TreeColor"
            android:fontFamily="@font/autour_one"
            android:text="@string/SeleccionarImagen"
            android:textColor="@color/SecondColor" />

    <ImageView
        android:id="@+id/ivVistaPrevia"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:layout_marginTop="10dp"
        android:background="#EEEEEE"/>

        <Button
            android:id="@+id/btnGuardarCambios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/TreeColor"
            android:fontFamily="@font/autour_one"
            android:text="@string/GuardarCambios"
            android:textColor="@color/SecondColor" />

        <Button
            android:id="@+id/btnEliminarDestino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/TreeColor"
            android:text="@string/EliminarDestino"
            android:textColor="@color/SecondColor"
            android:fontFamily="@font/autour_one" />
    </LinearLayout>
</LinearLayout>