<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20px"
    android:orientation="vertical"
    android:background="@color/TreeColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:layout_margin="30px"
        android:background="@drawable/bg1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/RegistrarDestino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/autour_one"
            android:text="@string/btnAgregarDestino"
            android:textColor="@color/TreeColor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etNombreDestino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/TreeColor"
            android:fontFamily="@font/autour_one"
            android:hint="@string/NombreDestino"
            android:textColor="@color/TreeColor"
            android:textColorHint="@color/FourColor" />


    <Spinner
        android:id="@+id/spinnerPais"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/TreeColor"
        android:textColorHint="@color/FourColor"
        android:backgroundTint="@color/TreeColor"
        android:layout_marginBottom="10dp" />

        <EditText
            android:id="@+id/etPrecio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/TreeColor"
            android:fontFamily="@font/autour_one"
            android:hint="@string/Precio"
            android:inputType="numberDecimal"
            android:textColor="@color/TreeColor"
            android:textColorHint="@color/FourColor" />

        <EditText
            android:id="@+id/etDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/TreeColor"
            android:fontFamily="@font/autour_one"
            android:hint="@string/Descripcion"
            android:inputType="textMultiLine"
            android:lines="3"
            android:textColor="@color/TreeColor"
            android:textColorHint="@color/FourColor" />

        <Button
            android:id="@+id/btnSeleccionarImagen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/TreeColor"
            android:fontFamily="@font/autour_one"
            android:text="@string/SeleccionarImagen"
            android:textColor="@color/MainColor" />

    <ImageView
        android:id="@+id/ivVistaPrevia"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:layout_marginTop="10dp"
        android:background="#EEEEEE"/>

        <Button
            android:id="@+id/btnGuardarDestino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/TreeColor"
            android:fontFamily="@font/autour_one"
            android:text="@string/GuardarCambios"
            android:textColor="@color/MainColor" />
    </LinearLayout>
</LinearLayout>